<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2012 Sony Mobile Communications AB.
 * 
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */
-->
<resources>
    <string name="app_name">Music Remote Small App</string>
    
    <string name="play">▶︎</string>
    <string name="next">▶▶</string>
    <string name="previous">◀◀︎</string>
    <string name="up">＋︎</string>
    <string name="down">ー︎</string>
    <string name="minimize">.︎</string>
    
    <string name="accelerometer_rotation_off">Setting Accelerometer Rotation to Off</string>
    <string name="accelerometer_rotation_on">Setting Accelerometer Rotation to On</string>
    <string name="wifi_off">Setting Wi-Fi to Off</string>
    <string name="wifi_on">Setting Wi-Fi to On</string>
    <string name="bluetooth_off">Setting Bluetooth to Off</string>
    <string name="bluetooth_on">Setting Bluetooth to On</string>
    
</resources>
